--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ repositories {
 
 
 dependencies {
+	compile('com.google.code.gson:gson:2.8.2')
+	compile('org.apache.httpcomponents:fluent-hc:4.5.4')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-actuator-docs')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
